--- a/styles/globals.css
+++ b/styles/globals.css
@@ -6,6 +6,9 @@
   --foreground-rgb: 0, 0, 0;
   --background-start-rgb: 214, 219, 220;
   --background-end-rgb: 255, 255, 255;
+  --blur: rgba(0, 0, 0, 0.5);
+  --primary: 0, 0, 0;
+  --secondary: 255, 255, 255;
 }
 
 @media (prefers-color-scheme: dark) {
@@ -24,4 +27,62 @@ body {
       rgb(var(--background-end-rgb))
     )
     rgb(var(--background-start-rgb));
+}
+
+.blur {
+  background: rgba(0, 0, 255, 0.5);
+  backdrop-filter: blur(5px);
+  filter: drop-shadow(0px 0px 90px rgba(0, 0, 0, 1));
+  opacity: 90%;
+  /* border-radius: 50% 90% 50% 50%; */
+  z-index: 1000;
+  position: fixed;
+  width: 100vw;
+  height: 100vh;
+  /* top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%); */
+  pointer-events: none;
+}
+
+.pill {
+  border-radius: 50px;
+  padding: 8px 20px;
+  font-size: 30px;
+  font-weight: 500;
+  letter-spacing: 1px;
+  cursor: pointer;
+  transition: all 0.2s ease-in-out;
+  /* width: fit-content; */
+  display: inline-block;
+}
+
+/* .pill:hover {
+  transform: scale(1.1);
+} */
+
+.pill.primary {
+  background: rgb(var(--primary));
+  color: rgb(var(--secondary));
+  border: 1px solid rgb(var(--primary));
+}
+
+.pill.secondary {
+  background: rgb(var(--secondary));
+  color: rgb(var(--primary));
+  border: 1px solid rgb(var(--primary));
+}
+
+.navx {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100px;
+  /* background: rgb(var(--background-start-rgb)); */
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 0 50px;
+  z-index: 100;
 }
